[Feature] cards with scroll

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,7 @@
 html {
   font-size: 62.5%;
   font-family: var(--font-sans);
+  scroll-behavior: smooth;
 }
 
 header {
@@ -103,7 +104,7 @@ header img {
   width: 13px;
   height: 8px;
   margin-left: 10px;
-  background-image: url('./assets/icons/vector.svg');
+  background-image: url('../assets/icons/vector.svg');
 }
 
 main {
@@ -132,7 +133,7 @@ main {
   height: 200px;
   margin: 0 auto;
   margin-bottom: 50px;
-  background-image: url('./assets/images/Bitcoin.svg');
+  background-image: url('../assets/images/Bitcoin.svg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -224,7 +225,7 @@ main {
   width: 15px;
   height: 15px;
   margin-left: 10px;
-  background-image: url('./assets/icons/trending-down.svg');
+  background-image: url('../assets/icons/trending-down.svg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -235,7 +236,7 @@ main {
   width: 15px;
   height: 15px;
   margin-left: 10px;
-  background-image: url('./assets/icons/trending-up.svg');
+  background-image: url('../assets/icons/trending-up.svg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -281,7 +282,7 @@ main {
   left: calc(50% - 20px);
   width: 40px;
   height: 25px;
-  background-image: url(./assets/icons/potato.svg);
+  background-image: url('../assets/icons/potato.svg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -316,7 +317,7 @@ main {
   width: 90%;
   min-width: 288px;
   max-width: 400px;
-  height: 150px;
+  min-height: 150px;
   margin: 15px auto;
   padding: 15px;
   background-color: var(--black);
@@ -335,16 +336,16 @@ main {
 }
 
 .icon-clock {
-  background-image: url('./assets/icons/clock.svg');
+  background-image: url('../assets/icons/clock.svg');
 }
 .icon-eye {
-  background-image: url('./assets/icons/eye.svg');
+  background-image: url('../assets/icons/eye.svg');
 }
 .icon-cash {
-  background-image: url('./assets/icons/dollar-sign.svg');
+  background-image: url('../assets/icons/dollar-sign.svg');
 }
 .icon-check {
-  background-image: url('./assets/icons/check-circle.svg');
+  background-image: url('../assets/icons/check-circle.svg');
 }
 
 .product__card--title {
@@ -360,4 +361,181 @@ main {
   font-weight: 500;
   line-height: 1.8rem;
   color: #808080;
+}
+
+.bitcoin-img-container {
+  width: 100%;
+  min-width: 320px;
+  height: 50vh;
+  background-image: url('../assets/images/bitcoinbaby.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.bitcoin-img-container h2 {
+  padding-top: 60px;
+  font-size: 2.4rem;
+  font-weight: bold;
+  line-height: 2.6rem;
+  color: var(--just-white);
+  text-align: center;
+}
+
+/* Plans */
+
+.plans-container {
+  width: 100%;
+  min-width: 320px;
+  padding-bottom: 70px;
+  text-align: center;
+}
+
+.plans__title {
+  width: 90%;
+  min-width: 288px;
+  height: auto;
+  margin: 0 auto;
+  margin-bottom: 50px;
+}
+
+.plans__title h2 {
+  padding-top: 50px;
+  font-size: 2.4rem;
+  font-weight: bold;
+  line-height: 2.6rem;
+  color: var(--black);
+}
+
+.plans__title p {
+  padding-top: 30px;
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1.8rem;
+  color: #757575;
+}
+
+.plans__slider {
+  display: flex;
+  height: 320px;
+  overflow-x: scroll;
+  overscroll-behavior-x: contain;
+  scroll-snap-type: x proximity;
+}
+
+.plans__card {
+  position: relative;
+  scroll-snap-align: center;
+  width: 70%;
+  min-width: 190px;
+  max-width: 300px;
+  height: 250px;
+  margin: 50px 5px 0;
+  padding: 0 15px;
+  background-color: var(--just-white);
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(89, 73, 30, 0.16);
+}
+
+.recommended {
+  position: absolute;
+  width: 120px;
+  height: 31px;
+  padding: 6px;
+  left: calc(50% - 60px);
+  top: -15px;
+  font-size: 1.2rem;
+  background-color: var(--bitcoin-orage);
+  border-radius: 8px;
+  color: var(--just-white);
+}
+
+.plan-card__title {
+  padding-top: 30px;
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1.8rem;
+  color: var(--black);
+}
+
+.plan-card__price {
+  display: flex;
+  justify-content: center;
+  padding: 5px 0;
+  font-size: 5.2rem;
+  font-weight: bold;
+  color: var(--black);
+}
+
+.plan-card__price span {
+  margin: 10px 2px 0 0;
+  font-size: 1.2rem;
+  font-weight: 300;
+  text-align: start;
+}
+
+.plan-card__saving {
+  font-size: 1.2rem;
+  color: #757575;
+}
+
+.plan-card__ca {
+  width: 150px;
+  height: 48px;
+  margin-top: 20px;
+  background-color: var(--off-white);
+  border: 2px solid var(--bitcoin-orage);
+  border-radius: 4px;
+  font-family: var(--font-sans);
+  font-size: 1.4rem;
+  font-weight: bold;
+  line-height: 1.8rem;
+  color: var(--black);
+}
+
+.plan-card__ca span {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background-image: url('../assets/icons/arrow-right.svg');
+  vertical-align: text-bottom;
+}
+
+footer {
+  display: flex;
+  width: 100%;
+  height: 150px;
+  background-color: var(--bitcoin-orage);
+}
+
+footer section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+}
+
+footer .left ul {
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1.8rem;
+  list-style: none;
+}
+
+.left li {
+  margin: 10px 0;
+}
+
+.left a {
+  text-decoration: none;
+  color: var(--just-white);
+}
+
+footer .right {
+  display: flex;
+  flex-direction: column;
+}
+
+footer .right p {
+  color: var(--just-white);
 }
